# yaga2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  CLAUDE.md  Dockerfile  README.md  admin_dashboard.py  anomaly_fingerprinter.py  anomaly_models.py  config.json  config.minimal.json  docker-compose.yml  docker-entrypoint.sh  inference.py  main.py  prefetch_metrics.py  pyproject.toml  time_aware_anomaly_detection.py  vmclient.py
docs/: ADVANCED_ANOMALY_IMPROVEMENTS.md  ANOMALY_MESSAGING_IMPROVEMENTS.md  API_CHANGELOG.md  API_SPECIFICATION.md  CONFIGURATION.md  DEPLOYMENT.md  DETECTION_PIPELINE_REDESIGN.md  DETECTION_SIGNALS.md  ENVOY_ENRICHMENT.md  ENVOY_ENRICHMENT_DESIGN.md  FINGERPRINTING.md  INCIDENT_ANALYSIS_16a3a7c2e958.md  INFERENCE_API_PAYLOAD.md  INFERENCE_MODULE_ARCHITECTURE.md  KNOWN_ISSUES.md  MACHINE_LEARNING.md  METRICS_AND_QUERIES.md  ML_TRAINING.md  OPERATIONS.md  PROPOSAL_RESOLUTION_METRICS.md  SEMANTIC_ANALYSIS_EXPERT_REVIEW.md  SRE_IMPROVEMENT_PLAN.md  TRAINING_CODE_EXPERT_REVIEW.md
docs/book/: book.toml
docs/book/book/html/: 404.html  index.html  introduction.html  overview.html  print.html  searcher-c2a407aa.js  searchindex-25c2ddb6.js  searchindex-5019ba8d.js  toc-e4c30426.js  toc.html
docs/book/book/html/detection/: index.html  isolation-forest.html  pattern-matching.html  pipeline.html
docs/book/book/html/incidents/: confirmation.html  fingerprinting.html  index.html  state-machine.html
docs/book/book/html/reference/: api-payload.html  configuration.html  decision-matrix.html  troubleshooting.html
docs/book/book/html/slo/: database-latency.html  error-rate.html  index.html  latency.html  request-rate.html  severity-adjustment.html
docs/book/src/: SUMMARY.md  introduction.md  overview.md
docs/book/src/detection/: README.md  isolation-forest.md  pattern-matching.md  pipeline.md
docs/book/src/incidents/: README.md  confirmation.md  fingerprinting.md  state-machine.md
docs/book/src/reference/: api-payload.md  configuration.md  decision-matrix.md  troubleshooting.md
docs/book/src/slo/: README.md  database-latency.md  error-rate.md  latency.md  request-rate.md  severity-adjustment.md
docs/mermaid/: 01-inference-pipeline.mmd  02-slo-evaluation-detail.mmd  03-request-rate-correlation.mmd  04-inference-sequence.mmd  05-severity-matrix.mmd  README.md
scripts/: reset_incidents.py  test_exception_enrichment.py
smartbox_anomaly/: __init__.py  compat.py
smartbox_anomaly/api/: __init__.py  models.py
smartbox_anomaly/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  protocols.py  types.py  utils.py
smartbox_anomaly/detection/: __init__.py  detector.py  interpretations.py  service_config.py  time_aware.py
smartbox_anomaly/enrichment/: __init__.py  envoy.py  exceptions.py  service_graph.py
smartbox_anomaly/fingerprinting/: __init__.py  fingerprinter.py
smartbox_anomaly/inference/: __init__.py  alert_formatter.py  anomaly_builder.py  detection_engine.py  detection_runner.py  enrichment_runner.py  model_manager.py  models.py  pipeline.py  results_processor.py  time_aware.py
smartbox_anomaly/metrics/: __init__.py  cache.py  client.py  quality.py  validation.py
smartbox_anomaly/slo/: __init__.py  evaluator.py
smartbox_anomaly/training/: __init__.py  feature_engineering.py  pipeline.py  storage.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test_api_models.py  test_config.py  test_constants.py  test_detection.py  test_enrichment.py  test_fingerprinter.py  test_inference_module.py  test_integration.py  test_main.py  test_slo_evaluator.py  test_utils.py  test_validation.py  test_vmclient.py
