[project]
name = "smartbox-anomaly-detection"
version = "2.0.0"
description = "Production-grade ML pipeline for real-time anomaly detection in microservices"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Smartbox ML Team"}
]
keywords = ["anomaly-detection", "machine-learning", "isolation-forest", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastparquet>=2024.11.0",
    "hdbscan>=0.8.40",
    "joblib>=1.5.1",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "requests>=2.32.0",
    "schedule>=1.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
    "jupyter>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
smartbox-inference = "inference:main"
smartbox-train = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smartbox_anomaly*"]
exclude = ["tests*", "docs*", "alerts*", "smartbox_models*", "smartbox_training_data*"]

# =============================================================================
# Ruff Configuration (replaces black, isort, flake8)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "smartbox_models",
    "smartbox_training_data",
    "alerts",
    "bak-*.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLW0603", # global statement (acceptable for config singletons)
    "PLR0124", # self-comparison (acceptable for NaN checks)
    "TC003",  # type-checking imports (minor optimization, not critical)
    "RUF012", # mutable class attributes (acceptable without ClassVar)
    "F841",   # unused variables (often for destructuring)
    "SIM102", # nested if statements (often more readable)
    "SIM108", # ternary operator (often less readable)
]

[tool.ruff.lint.isort]
known-first-party = [
    "smartbox_anomaly",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "B017"]
"__init__.py" = ["F401", "RUF022"]  # Allow organized __all__ lists
"compat.py" = ["RUF022"]  # Allow organized __all__ lists

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_defs = false  # Gradual adoption
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = [
    "^(?!smartbox_anomaly/).*\\.py$",  # Exclude root-level Python files
    "^bak-.*\\.py$",  # Exclude backup files
]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "pandas.*",
    "numpy.*",
    "joblib.*",
    "hdbscan.*",
    "seaborn.*",
    "matplotlib.*",
    "structlog.*",
    "schedule.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["smartbox_anomaly"]
branch = true
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "bak-*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
skip_covered = true
fail_under = 50
